[gd_scene load_steps=7 format=3 uid="uid://co7baqm7xfft1"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_aam74"]
[ext_resource type="Theme" uid="uid://w4m5ybclqpn6" path="res://themes/MainMenuTheme.tres" id="1_e24pe"]
[ext_resource type="Texture2D" uid="uid://b4ptt7hd5ycpa" path="res://assets/MainMenuRocket.png" id="3_ldg84"]

[sub_resource type="Gradient" id="Gradient_uurbw"]
colors = PackedColorArray(0.0867293, 0, 0.207031, 1, 0.364706, 0, 0.870588, 1)
metadata/_snap_enabled = true

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jx6hj"]
gradient = SubResource("Gradient_uurbw")

[sub_resource type="LabelSettings" id="LabelSettings_awcvb"]
font_size = 100

[node name="MainMenu" type="CanvasLayer"]
offset = Vector2(1, 0)
transform = Transform2D(1, 0, 0, 1, 1, 0)
script = ExtResource("1_aam74")

[node name="MainMenuWrapper" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e24pe")

[node name="Sprite2D" type="Sprite2D" parent="MainMenuWrapper"]
position = Vector2(641.5, 361)
scale = Vector2(20.0469, 11.25)
texture = SubResource("GradientTexture2D_jx6hj")
region_rect = Rect2(0, 0, 64, 64)

[node name="Sprite2D2" type="Sprite2D" parent="MainMenuWrapper"]
position = Vector2(944, 167)
texture = ExtResource("3_ldg84")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuWrapper"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -154.0
offset_right = 209.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Title" type="Label" parent="MainMenuWrapper/VBoxContainer"]
layout_mode = 2
text = "Boosted"
label_settings = SubResource("LabelSettings_awcvb")
horizontal_alignment = 1

[node name="Play" type="Button" parent="MainMenuWrapper/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Settings" type="Button" parent="MainMenuWrapper/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="MainMenuWrapper/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MainMenuWrapper/VBoxContainer/Play" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenuWrapper/VBoxContainer/Quit" to="." method="_on_quit_button_pressed"]
